kube-prometheus/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: prometheus-auth
  namespace: monitoring
spec:
  basicAuth: # htpasswd -nb admin testpassword
    secret: |
      admin:$apr1$P0g2ujdA$Ps.DTTvKRL9ktYcLA7YZf.
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`prometheus.example.com`)
      kind: Rule
      services:
        - name: prometheus-k8s
          port: 9090
      middlewares:
        - name: prometheus-auth
